[gd_scene load_steps=16 format=2]

[ext_resource path="res://StartMenu/gui.gd" type="Script" id=1]
[ext_resource path="res://fonts/inter/Inter-UI-BoldItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/inter/Inter-UI-Italic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/inter/Inter-UI-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/inter/Inter-UI-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://fonts/lato/Lato-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://StartMenu/NumbersButton.gd" type="Script" id=7]
[ext_resource path="res://addons/touch_button/touch_button.gd" type="Script" id=8]
[ext_resource path="res://addons/touch_button/icon.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]

size = 16
use_mipmaps = false
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 16
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 16
use_mipmaps = false
use_filter = true
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 16
use_mipmaps = false
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 32
use_mipmaps = false
use_filter = true
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 24
use_mipmaps = false
use_filter = true
font_data = ExtResource( 5 )

[node name="Gui" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="Description" type="RichTextLabel" parent="." index="0"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -300.0
margin_top = 60.0
margin_bottom = 500.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "This is a text box

[b]This is a text box[/b]

[i]This is a text box[/i]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "This is a text box

This is a text box

This is a text box"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Margin", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Heading" type="Label" parent="." index="1"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -300.0
margin_top = 10.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Heading"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Separator" type="VSeparator" parent="." index="2"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -354.0
margin_top = 50.0
margin_right = -350.0
margin_bottom = 550.0
rect_scale = Vector2( 2, 1 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="StartButton" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 733.0
margin_top = 508.0
margin_right = 972.0
margin_bottom = 589.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="NumbersButton" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 37.3143
margin_top = 46.813
margin_right = 150.0
margin_bottom = 146.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Numbers"
flat = false
align = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="TouchButton" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 170.0
margin_top = 260.0
margin_right = 480.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
script = ExtResource( 8 )
__meta__ = {
"_editor_icon": ExtResource( 9 )
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="pressed" from="NumbersButton" to="." method="_on_NumbersButton_pressed"]

[connection signal="touched" from="TouchButton" to="." method="_on_TouchButton_touched"]


